--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-    <button></button>
+    <button id="changeColor"></button>
     <script src="popup.js"></script>
 </body>
 </html>
