added font input field

--- a/options.html
+++ b/options.html
@@ -9,6 +9,12 @@
     <div>
         <p>Choose a different color</p>
     </div>
+    <div id="textButtonDiv"></div>
+    <div>
+        <label for="fontSize">Font Size:</label>
+        <input type="number" id="fontSize" name="fontSize"><br>
+        
+    </div>
 </body>
 <script src="options.js"></script>
 
