--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,8 @@
 <body>
     
     <button id="changeColor"></button>
+    <br>
+    <input type="number" id="changeFontSize">
     <script src="popup.js"></script>
 </body>
 </html>
