moved change color from options page to browser tap

--- a/options.html
+++ b/options.html
@@ -13,9 +13,9 @@
     <div>
         <label for="fontSize">Font Size:</label>
         <input type="number" id="fontSize" name="fontSize"><br>
-        
+
     </div>
 </body>
-<script src="options.js"></script>
+<!-- <script src="options.js"></script> -->
 
 </html>
