--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="button.css">
 
 </head>
-<body>
-    
+
+<!-- <body>
+
     <button id="changeColor"></button>
     <br>
     <input type="number" id="changeFontSize">
     <script src="popup.js"></script>
+</body> -->
+
+<body>
+    <button id="changeColor"></button>
+    <div id="buttonDiv"></div>
+    <div>
+        <p>Choose a different color</p>
+    </div>
+    <div id="textButtonDiv"></div>
+    <div>
+        <label for="fontSize">Font Size:</label>
+        <input type="number" id="fontSize" name="fontSize"><br>
+
+    </div>
+    <script src="popup.js"></script>
 </body>
+<script src="options.js"></script>
+
+
 </html>
