--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="popup.css">
 
-    <script type="module" src="https://raw.githubusercontent.com/jaames/iro.js/master/dist/iro.min.js">
+
 
     </script>
 
@@ -19,21 +19,50 @@
 </body> -->
 
 <body>
-    <div id="picker"></div>
-    <button id="changeColor"></button>
-    <div id="buttonDiv"></div>
-    <div>
-        <p>Choose a different color</p>
-    </div>
-    <div id="textButtonDiv"></div>
-    <div>
-        <label for="fontSize">Font Size:</label>
-        <input type="number" id="fontSize" name="fontSize"><br>
+    <div className="popup-ui">
 
+        <div id="colorPicker">
+            <h2>Color Gradient Selector</h2>
+
+        </div>
+        <div className="backgroundColor">
+            <label for="backgroundColor">Background Color:</label>
+            <input id="backgroundColor" name="backgroundColor"><br>
+        </div>
+        <div>
+            <label for="elementColor">Element Color:</label>
+            <input id="elementColor" name="elementColor"><br>
+        </div>
+
+
+        <div>
+            <label for="fontFamily">Font Family:</label>
+            <input type="text" id="fontFamily" name="fontFamily"><br>
+        </div>
+        <div>
+            <label for="fontSize">Font Size:</label>
+            <input type="number" id="fontSize" name="fontSize"><br>
+        </div>
+        <div>
+            <label for="fontColor">Font Color:</label>
+            <input id="fontColor" name="fontColor"><br>
+        </div>
+
+        <div>
+            <button>Save Design</button>
+            <button>Undo All</button>
+        </div>
+
+        <div>
+            <h2>Stored Designs</h2>
+            <div id="storedDesign1">Design1</div>
+            <div id="storedDesign2">Design2</div>
+            <div id="storedDesign3">Design3</div>
+        </div>
     </div>
     <script src="popup.js"></script>
 </body>
-<script src="options.js"></script>
+
 
 
 </html>
