--- a/options.html
+++ b/options.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <link rel="stylesheet" href="button.css">
 
 
-<body>
+<body> -->
 
 <!-- 
 <h2>Let's Create a Color Picker</h2>
@@ -17,7 +17,7 @@
   </div>
 </div> -->
 
-
+<!-- 
     <div id="buttonDiv"></div>
     <div>
         <p>Choose a different color</p>
@@ -30,4 +30,4 @@
 </body>
 <script src="options.js"></script>
 
-</html>
+</html> -->
