--- a/popup.html
+++ b/popup.html
@@ -5,13 +5,6 @@
     <link rel="stylesheet" href="popup.css">
 
 
-
-    </script>
-
-    <script type="module" src="https://raw.githubusercontent.com/jaames/iro.js/master/dist/iro.min.js">
-
-    </script>
-
 </head>
 
 <!-- <body>
@@ -27,11 +20,14 @@
     <div className="popup-ui">
         <div className="top-section">
             <div className="top-left-section">
-                <div id="colorPicker">
+                <!-- <div id="colorPicker">
                     <div id="colorPickerBox"></div>
                     <h2>Color Gradient Selector</h2>
+                </div> -->
+                <div class="color-reset">
+                    <input type="text" placeholder="choose color now, or don't, your choice">
+                    <button>Click me, I'm lonley</button>
                 </div>
-
                 <div style="text-align: center">
                     <input type="text" id="hex">
                     <input type="color" id="color">
@@ -81,8 +77,8 @@
             </div>
         </div>
     </div>
+
     <script src="popup.js"></script>
-    <script src="picker.js"></script>
 
 </body>
 
