--- a/popup.html
+++ b/popup.html
@@ -7,13 +7,7 @@
 
 </head>
 
-<!-- <body>
 
-    <button id="changeColor"></button>
-    <br>
-    <input type="number" id="changeFontSize">
-    <script src="popup.js"></script>
-</body> -->
 
 <body>
 
@@ -25,7 +19,7 @@
                     <h2>Color Gradient Selector</h2>
                 </div> -->
                 <div class="color-reset">
-                    <input type="text" placeholder="choose color now, or don't, your choice">
+                    <input type="text" id="colorInput" placeholder="choose color now, or don't, your choice">
                     <button>Click me, I'm lonley</button>
                 </div>
                 <div style="text-align: center">
