--- a/popup.html
+++ b/popup.html
@@ -49,6 +49,7 @@
                 <div>
                     <label for="fontSize">Font Size:</label>
                     <input type="number" id="fontSize" name="fontSize"><br>
+                    <button id="font-size-reset">Change Font Size</button>
                 </div>
 
                 <div>
