fix reset button functionality (#18)
* change font family

* handle browser tab sendMessage promise correctly

--- a/popup.html
+++ b/popup.html
@@ -39,10 +39,9 @@
       </div>
       <div className="bottom-section">
         <div className="bottom-left-section">
-
           <div>
             <label for="textContent">Text Content:</label>
-            <input type="text" id="textContent" name="textContent"><br />
+            <input type="text" id="textContent" name="textContent" /><br />
           </div>
           <div>
             <label for="fontFamily">Font Family:</label>
