--- a/popup.html
+++ b/popup.html
@@ -1,84 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="popup.css" />
-  </head>
 
-  <body>
-    <div className="popup-ui">
-      <div className="top-section">
-        <div className="top-left-section">
-          <!-- <div id="colorPicker">
+<head>
+    <link rel="stylesheet" href="popup.css" />
+</head>
+
+<body>
+    <div class="popup-ui">
+        <div class="top-section">
+            <div class="top-left-section">
+                <!-- <div id="colorPicker">
                     <div id="colorPickerBox"></div>
                     <h2>Color Gradient Selector</h2>
                 </div> -->
-          <div class="color-reset">
-            <input
-              type="text"
-              id="colorInput"
-              placeholder="choose color now, or don't, your choice"
-            />
-            <button>Click me, I'm lonley</button>
-          </div>
-          <div style="text-align: center">
-            <input type="text" id="hex" />
-            <input type="color" id="color" />
-          </div>
-        </div>
-        <div className="top-right-section">
-          <div className="backgroundColor">
-            <label for="backgroundColor">Background Color:</label>
-            <input id="backgroundColor" name="backgroundColor" /><br />
-          </div>
 
-          <div>
-            <label for="elementColor">Element Color:</label>
-            <input id="elementColor" name="elementColor" /><br />
-          </div>
-        </div>
-      </div>
-      <div className="bottom-section">
-        <div className="bottom-left-section">
-          <div>
-            <label for="textContent">Text Content:</label>
-            <input type="text" id="textContent" name="textContent" /><br />
-          </div>
-          <div>
-            <label for="textContent">Text Content:</label>
-            <input type="text" id="textContent" name="textContent" /><br />
-          </div>
-          <div>
-            <label for="fontFamily">Font Family:</label>
-            <input type="text" id="fontFamily" name="fontFamily" /><br />
-          </div>
+                <!-- <div style="text-align: center">
+                    <input type="text" id="hex" />
+                    <input type="color" id="color" />
+                </div> -->
+            </div>
+            <div class="top-right-section">
+                <div class="backgroundColor">
+                    <label for="backgroundColor">Background Color:</label>
+                    <input type="text" id="colorInput" placeholder="choose color now" /><br />
+                </div>
 
-          <div>
-            <label for="fontSize">Font Size:</label>
-            <input type="number" id="fontSize" name="fontSize" /><br />
-            <button id="font-size-reset">Change Font Size</button>
-          </div>
-
-          <div>
-            <label for="fontColor">Font Color:</label>
-            <input id="fontColor" name="fontColor" /><br />
-          </div>
+                <div>
+                    <label for="elementColor">Element Color:</label>
+                    <input id="elementColor" name="elementColor" /><br />
+                </div>
+            </div>
         </div>
-        <div className="bottom-right-section">
-          <div>
-            <button>Save Design</button>
-            <button>Undo All</button>
-          </div>
+        <div class="bottom-section">
+            <div class="bottom-left-section">
+                <div>
+                    <label for="fontFamily">Font Family:</label>
+                    <input type="text" id="fontFamily" name="fontFamily" /><br />
+                </div>
 
-          <div>
-            <h2>Stored Designs</h2>
-            <div id="storedDesign1">Design1</div>
-            <div id="storedDesign2">Design2</div>
-            <div id="storedDesign3">Design3</div>
-          </div>
+                <div>
+                    <label for="fontSize">Font Size:</label>
+                    <input type="number" id="fontSize" name="fontSize" /><br />
+                    <!-- <button id="font-size-reset">Change Font Size</button> -->
+                </div>
+
+                <div>
+                    <label for="fontColor">Font Color:</label>
+                    <input id="fontColor" name="fontColor" /><br />
+                </div>
+            </div>
+            <div class="bottom-right-section">
+                <div class="design-save">
+                    <button>Save Design</button>
+                    <button id="color-reset">Undo All</button>
+                </div>
+
+                <h2>Stored Designs</h2>
+                <div class="stored-designs">
+                    <div class="storedDesign1">
+
+                        <button>Design1</button>
+                    </div>
+                    <div class="storedDesign2">
+
+                        <button>Design2</button>
+                    </div>
+                    <div class="storedDesign3">
+
+                        <button>Design3</button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
     <script src="popup.js"></script>
-  </body>
+</body>
+
 </html>
