working text Content swap functionality

--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,10 @@
         <div class="bottom-section">
             <div class="bottom-left-section">
                 <div>
+                    <label for="textContent">New Text Content</label>
+                    <input type="text" id="textContent" name="textContent" /><br />
+                </div>
+                <div>
                     <label for="fontFamily">Font Family:</label>
                     <input type="text" id="fontFamily" name="fontFamily" /><br />
                 </div>
