--- a/popup.html
+++ b/popup.html
@@ -1,72 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <link rel="stylesheet" href="popup.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="popup-ui">
-        <div class="top-section">
-            <div class="top-left-section">
-        
-            </div>
-            <div class="top-right-section">
-                <div class="backgroundColor">
-                    <label for="backgroundColor">Background Color:</label>
-                    <input type="text" id="colorInput" placeholder="choose color now" /><br />
-                </div>
+      <div class="top-section">
+        <div class="top-left-section"></div>
+        <div class="top-right-section">
+          <div class="backgroundColor">
+            <label for="backgroundColor">Background Color:</label>
+            <input
+              type="text"
+              id="colorInput"
+              placeholder="choose color now"
+            /><br />
+          </div>
 
-                <div>
-                    <label for="elementColor">Element Color:</label>
-                    <input id="elementColor" name="elementColor" /><br />
-                </div>
-            </div>
+          <div>
+            <label for="elementColor">Element Color:</label>
+            <input id="elementColor" name="elementColor" /><br />
+          </div>
         </div>
-        <div class="bottom-section">
-            <div class="bottom-left-section">
-                <div>
-                    <label for="fontFamily">Font Family:</label>
-                    <input type="text" id="fontFamily" name="fontFamily" /><br />
-                </div>
+      </div>
+      <div class="bottom-section">
+        <div class="bottom-left-section">
+          <div>
+            <label for="textContent">New Text Content</label>
+            <input type="text" id="textContent" name="textContent" /><br />
+          </div>
+          <div>
+            <label for="fontFamily">Font Family:</label>
+            <input type="text" id="fontFamily" name="fontFamily" /><br />
+          </div>
 
-                <div>
-                    <label for="fontSize">Font Size:</label>
-                    <input type="number" id="fontSize" name="fontSize" /><br />
-                    <!-- <button id="font-size-reset">Change Font Size</button> -->
-                </div>
+          <div>
+            <label for="fontSize">Font Size:</label>
+            <input type="number" id="fontSize" name="fontSize" /><br />
+            <!-- <button id="font-size-reset">Change Font Size</button> -->
+          </div>
 
-                <div>
-                    <label for="fontColor">Font Color:</label>
-                    <input id="fontColor" name="fontColor" /><br />
-                </div>
-            </div>
-            <div class="bottom-right-section">
-                <div class="design-save">
-                    <button>Save Design</button>
-                    <button id="color-reset">Undo All</button>
-                </div>
-
-                <h2>Stored Designs</h2>
-                <div class="stored-designs">
-                    <div class="storedDesign1">
-
-                        <button>Design1</button>
-                    </div>
-                    <div class="storedDesign2">
-
-                        <button>Design2</button>
-                    </div>
-                    <div class="storedDesign3">
-
-                        <button>Design3</button>
-                    </div>
-                </div>
-            </div>
+          <div>
+            <label for="fontColor">Font Color:</label>
+            <input id="fontColor" name="fontColor" /><br />
+          </div>
         </div>
+        <div class="bottom-right-section">
+          <div class="design-save">
+            <button>Save Design</button>
+            <button id="color-reset">Undo All</button>
+          </div>
+
+          <h2>Stored Designs</h2>
+          <div class="stored-designs">
+            <div class="storedDesign1">
+              <button>Design1</button>
+            </div>
+            <div class="storedDesign2">
+              <button>Design2</button>
+            </div>
+            <div class="storedDesign3">
+              <button>Design3</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="popup.js"></script>
-</body>
-
+  </body>
 </html>
