--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,7 @@
         <div class="bottom-left-section">
           <div>
             <label for="textContent">New Text Content</label>
-            <input type="text" id="textContent" name="textContent" /><br />
+            <input placeholder="{''old word'': ''new word''}" type="text" id="textContent" name="textContent" /><br />
           </div>
           <div>
             <label for="fontFamily">Font Family:</label>
