--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
 
                 <div class="backgroundColor">
                     <label for="backgroundColor">Background Color:</label>
-                    <input type="text" id="colorInput" placeholder="Enter a color" /><br />
+                    <input type="text" id="backgroundColor" placeholder="Enter a color" /><br />
                 </div>
 
                 <div>
