--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
             <div class="top-right-section">
                 <div class="backgroundColor">
                     <label for="backgroundColor">Background Color:</label>
-                    <input type="text" id="colorInput" placeholder="Enter a color" /><br />
+                    <input type="text" id="backgroundColor" placeholder="Enter a color" /><br />
                 </div>
                 <div>
                     <label for="textContent">New Text Content:</label>
@@ -33,7 +33,6 @@
                 <div>
                     <label for="fontSize">Font Size:</label>
                     <input placeholder="Enter a font size" type="number" id="fontSize" name="fontSize" /><br />
-                    <!-- <button id="font-size-reset">Change Font Size</button> -->
                 </div>
                 <div>
                     <label for="fontColor">Font Color:</label>
