universal reset button functional (#35)
* Update README.md

* Update README.md

* Create requirements.md

* Update requirements.md

* add fontSize change function

* fonSize change + reset succesfully functional

* Day 1 Merge (#15)

* loaded extension

* icons working, button appearing in browser

* working extension

* added color options for extension (#1)

Co-authored-by: AngelDOrtiz <aortizghs@gmail.com>

* Update README.md (#2)

Co-authored-by: Kalan Prudhomme <33067232+prudhomk@users.noreply.github.com>

* added font input field (#3)

* Update README.md (#4)

Co-authored-by: Kalan Prudhomme <33067232+prudhomk@users.noreply.github.com>

* Matt (#5)

* Update README.md

* moved change color from options page to browser tap

Co-authored-by: Kalan Prudhomme <33067232+prudhomk@users.noreply.github.com>

* added color options for extension (#6)

* Proof demo (#7)

* added color options for extension

* switched to firefox and started popup ui

* Proof demo (#8)

* added color options for extension

* switched to firefox and started popup ui

* popup ui background added

* one more

* Kara (#9)

* Update README.md

* Update README.md

* Create requirements.md

* Update requirements.md

* added color wheel script

Co-authored-by: Kalan Prudhomme <33067232+prudhomk@users.noreply.github.com>

* Proof demo (#10)

* added color options for extension

* switched to firefox and started popup ui

* popup ui background added

* one more

* css styling

* updateCss file added

* cookies added, for persistence

* Matt (#11)

* Update README.md

* moved change color from options page to browser tap

* new popup.js

Co-authored-by: Kalan Prudhomme <33067232+prudhomk@users.noreply.github.com>

* Kalan branch (#12)

* added font input field

* working on color picker

* implementing substitution function

* extension works!!

* removed window check

* font size change + 

--- a/popup.html
+++ b/popup.html
@@ -39,9 +39,10 @@
                     <input placeholder="Enter a font color" id="fontColor" name="fontColor" /><br />
                 </div>
                 <div class="design-save">
-                    <button id="reset">Undo All</button>
+                    <button id="reset">Reset</button>
                 </div>
             </div>
+          </div>
         </div>
     </div>
     </div>
